--- a/src/main/resources/assets/jcupsmod/lang/en_us.json
+++ b/src/main/resources/assets/jcupsmod/lang/en_us.json
@@ -10,5 +10,8 @@
   "block.jcupsmod.brenium_ore": "Brenium Ore",
   "block.jcupsmod.end_stone_brenium_ore": "End Stone Brenium Ore",
 
-  "itemgroup.brenium": "Brenium Items"
+  "itemgroup.brenium": "Brenium Items",
+
+  "sounds.jcupsmod.brenium_bomb_explosion": "Brenium Bomb Explodes",
+  "sounds.jcupsmod.brenium_bomb_fuse": "Brenium Bomb Fuse Burns"
 }
