--- a/src/main/resources/assets/jcupsmod/lang/en_us.json
+++ b/src/main/resources/assets/jcupsmod/lang/en_us.json
@@ -10,6 +10,7 @@
   "block.jcupsmod.brenium_block": "Block of Brenium",
   "block.jcupsmod.brenium_extractor": "Brenium Extractor",
   "block.jcupsmod.brenium_bomb": "Brenium Bomb",
+  "block.jcupsmod.idunno_bomb": "Idunno Bomb",
   "block.jcupsmod.brenium_ore": "Brenium Ore",
   "block.jcupsmod.end_stone_brenium_ore": "End Stone Brenium Ore",
 
